#[workspace]
#resolver = "2"

[package]
authors = ["swrge"]
edition = "2021"
include = ["/src"]
license = "MIT"
rust-version = "1.84.0"
categories = ["api-bindings"]
description = "Functions and constants for validating request parameters"
homepage = "https://twilight.rs/"
keywords = ["discord", "discord-api", "twilight"]
name = "randy-validate"
repository = "https://github.com/swrge/randy-validate"
version = "0.1.0"

[dependencies]
twilight-model = { default-features = false, git = "https://github.com/swrge/randy-model", version = "0.1.0", package = "randy-model" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1.1.0" }
