#[workspace]
#resolver = "2"

[package]
name = "randy-validate"
description = "Functions and constants for validating request parameters"
repository = "https://github.com/swrge/randy-validate"
version = "0.1.0"
include = ["/src"]
authors = ["swrge", "Twilight Contributors"]
edition = "2021"
rust-version = "1.84.0"
license = "ISC"


[dependencies]
randy-model = { default-features = false, git = "https://github.com/swrge/randy-model", version = "0.1.0", package = "randy-model" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1.1.0" }
